src/test/examples/custom/valid/class/canCallPublicClassFunctionWithArgs.wacc
# Public class functions with arguments can be called

begin
  class H is 
    public int v
    public int J(int i) is 
      return i
    end
    public int f() is 
       v = 3 ;
       return v
    end
  end
  H v = new H(2) ; 
  int k = call v.J(10);
  println k
end