src/test/examples/custom/invalid/semanticErr/class/cannotCallPrivateClassFunctionWithArgs.wacc
# Private class functions cannot be called

begin
  class H is 
    public int v
    private int J(int z) is 
      return 0
    end
    public int f() is 
       v = 3 ;
       return v
    end
  end
  int f() is 
    return 0
  end
  H v = new H(2) ; 
  int k = call v.J(3) 
end